src/objects/CustomTranslationSwapnali__c/CustomTranslationSwapnali__c.object-meta.xml
<CustomObject>
    <description>Test</description>
    <label>CustomTranslationSwapnali</label>
    <nameField>
        <label>CustomTranslationSwapnali Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomTranslationSwapnalis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>