src/objects/CustomTranslationSwapnali__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>country</label>
    <type>Checkbox</type>
</CustomField>