src/objects/CustomTranslationSwapnali__c/fields/customfield3jun__c.field-meta.xml
<CustomField>
    <fullName>customfield3jun__c</fullName>
    <label>customfield3jun</label>
    <length>20</length>
    <type>Text</type>
</CustomField>