src/objects/CustomTranslationSwapnali__c/fields/Distint__c.field-meta.xml
<CustomField>
    <fullName>Distint__c</fullName>
    <label>Distint</label>
    <length>60</length>
    <type>Text</type>
</CustomField>