src/objects/CustomTranslationSwapnali__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>state</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>