src/objects/CustomTranslationSwapnali__c/recordTypes/new_Record.recordType-meta.xml
<RecordType>
    <fullName>new_Record</fullName>
    <active>true</active>
    <label>new Record</label>
</RecordType>