src/objects/CustomTranslationSwapnali__c/validationRules/PriceCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>PriceCheck</fullName>
    <active>true</active>
    <errorConditionFormula>country__c</errorConditionFormula>
    <errorMessage>Please enter valid country name</errorMessage>
</ValidationRule>