src/objects/CustomTranslationSwapnali__c/validationRules/PriceCheck2.validationRule-meta.xml
<ValidationRule>
    <fullName>PriceCheck2</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &lt; 12</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Enter valid price</errorMessage>
</ValidationRule>